# tocinator

./: .gitignore  LICENSE  README.md  TEST.md  TEST2.md  main.py  setup.cfg  setup.py  test.py
src/tocinator/: __init__.py  __main__.py  tocinator.py
