[metadata]
name = tocinator
version = 0.0.6
author=Rishabh Goel
author_email = rgoel1999@gmail.com
description = Generate a Table of Content from Markdown files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Coder-RG/tocinator
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
